--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
-    "routes": [
-        {"src": "/", "dest": "/"},
-        {"src": "/dashboards", "dest": "/dashboards"},
-        {"src": "/presentation/:id", "dest": "index.html"}
+    "rewrites": [
+      {
+        "source": "/((?!api/.*).*)",
+        "destination": "/index.html"
+      }
     ]
-}
+  }
