--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
-    "rewrites": [
-      {
-        "source": "/((?!api/.*).*)",
-        "destination": "/index.html"
-      }
+    "routes": [
+      { "src": "/", "dest": "/index.html" },
+      { "src": "/dashboards", "dest": "/dashboards" },
+      { "src": "/presentation/:id", "dest": "/index.html" },
+      { "src": "/(.*)", "dest": "/index.html" }
     ]
   }
+  
